@@ -1,0 +1,9 @@
+﻿namespace DaemonMC.Forms
+{
+    public abstract class Form
+    {
+        public int Id { get; set; } = 0;
+        public string Type { get; set; } = "";
+        public string Title { get; set; } = "";
+    }
+}
