@@ -44,7 +44,10 @@
             ResourcePackDataInfo = 82,
             ResourcePackChunkData = 83,
             ResourcePackChunkRequest = 84,
+            SetTitle = 88,
             PlayerSkin = 93,
+            ModalFormRequest = 100,
+            ModalFormResponse = 101,
             MoveActorDelta = 111,
             SetLocalPlayerAsInitialized = 113,
             NetworkChunkPublisherUpdate = 121,
