@@ -1,1 +1,9 @@
-First test release 
+Bugfix and feature release.
+
+Features:
+- Added new text related features like titles and popups and their API methods: SendChatMessage, SendPopup, SendJukeboxPopup, SendTip, SetTitle, SendActionBarTitle, ClearTitle. 
+- Added ModalForm and SimpleForm forms and API method for sending forms: player.SendForm.
+
+Fixes:
+- Fixed unnecessary SetActorData sending.
+- Fixed crash that occur randomly during gameplay.
